# MCP-server-guide

./: .env  .gitignore  README.md  example.txt  pyproject.toml
LocalAIuse/: creative_writing_prompt.py  file_management_tool.py  stock_data_resource.py
fastAPI/: creative_writing_prompt.py  file_management_tool.py  server.py  stock_data_resource.py
