[project]
name = "searchenginemcp"
version = "0.1.0"
description = "An MCP server that provides a web search tool using the Tavily API."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.12",
    "mcp[cli]>=1.9.3",
    "python-dotenv>=1.1.0",
    "tavily-python>=0.7.7",
    "yfinance>=0.2.66",
]
